update admin page

--- a/src/views/pages/episode.ejs
+++ b/src/views/pages/episode.ejs
@@ -27,11 +27,121 @@
                         <!-- Begin Page Content -->
                         <div class="container-fluid" style="margin: 20px 0;">
                             <a href="/admin/movies" class="btn btn-success mb-4">Back</a>
-                            <h1>
-                                <%- movie.Name %>
-                            </h1>
-                            <div>
+                            <div class="d-flex">
+                                <div style="min-width: 10%;">
+                                    <h3 class="text-center">
+                                        Episodes
+                                    </h3>
+                                    <hr>
+                                    <div id="list-eps" class="overflow-auto" style="height: 550px;">
+                                        <a href="javascript:void(0)" class="btn btn-warning my-2 d-block">
+                                            2
+                                        </a>
 
+                                    </div>
+                                    <button class="btn btn-info" data-toggle="modal" data-target="#addEpisode">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </button>
+                                </div>
+                                <div style="min-width: 80%; padding-left: 1rem;">
+                                    <h3 class="text-center">
+                                        <%- movie.Name %>
+                                    </h3>
+                                    <input type="hidden" value="<%- movie.idMovie %>" id="idMovie">
+                                    <hr>
+                                    <div id="episode-detail" class="w-100 d-flex">
+                                        <div style="width: 60%;">
+                                            <div>
+                                                <iframe
+                                                    src="https://1080.hdphimonline.com/share/4fbdc7de3e31de33862586c8db456f53"
+                                                    frameborder="0" class="w-100" style="height: 400px;"
+                                                    id="player"></iframe>
+                                            </div>
+                                        </div>
+                                        <div style="width: 40%; padding-left: 1rem;">
+                                            <div>
+                                                <h4 class="text-center">
+                                                    Update Link
+                                                </h4>
+                                                <div class="form-group">
+                                                    <label for="ep">Episode:</label>
+                                                    <input type="text" class="form-control" id="updateEp" disabled
+                                                        autocomplete="off">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="server">Server:</label>
+                                                    <input type="text" class="form-control" id="updateServer" disabled
+                                                        autocomplete="off">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="link">Link:</label>
+                                                    <input type="text" class="form-control" id="updateLink"
+                                                        autocomplete="off">
+                                                </div>
+                                                <input type="hidden" id="idEpisode">
+                                                <button class="btn btn-primary" id="updateLink">Save</button>
+                                                <button class="btn btn-danger" id="deleteLink">Delete</button>
+                                            </div>
+                                            <hr>
+                                            <div>
+                                                <h4 class="text-center">
+                                                    Add Link
+                                                </h4>
+
+                                                <div class="form-group d-flex">
+                                                    <label for="server" style="line-height: 30px;">Server:</label>
+                                                    <select id="addLinkServer" class="w-50 form-control ml-2">
+                                                        <% servers.forEach(server=> { %>
+                                                            <option value="<%- server.idServer %>">
+                                                                <%- server.Server %>
+                                                            </option>
+                                                            <% }); %>
+                                                    </select>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="link">Link:</label>
+                                                    <input type="text" class="form-control" id="addLink"
+                                                        autocomplete="off">
+                                                </div>
+
+                                                <button class="btn btn-success" id="newLink">Add</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="modal fade" id="addEpisode" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">ADD EPISODE</h5>
+                                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div>
+                                            <div class="form-group">
+                                                <label for="ep">Episode:</label>
+                                                <input type="text" class="form-control" id="addEp" autocomplete="off">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="Link">Link:</label>
+                                                <input type="text" class="form-control" id="addLink" autocomplete="off">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="server">Server:</label>
+                                                <input type="text" class="form-control" disabled
+                                                    value="<%- movie.Server %>" autocomplete="off">
+                                            </div>
+
+                                            <input type="hidden" value="<%- movie.idServer %>">
+                                            <button id="newEpisode" class="btn btn-primary">Add</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- -->
