--- a/src/views/pages/episode.ejs
+++ b/src/views/pages/episode.ejs
@@ -34,10 +34,13 @@
                                     </h3>
                                     <hr>
                                     <div id="list-eps" class="overflow-auto" style="height: 550px;">
-                                        <a href="javascript:void(0)" class="btn btn-warning my-2 d-block">
-                                            2
-                                        </a>
-
+                                        <% episodes.forEach(episode=> { %>
+                                            <a href="javascript:void(0)" class="btn btn-warning my-2 d-block"
+                                                data-movie="<%- movie.idMovie %>" data-episode="<%- episode.Episode %> "
+                                                onclick="getFullLink(this)">
+                                                <%- episode.Episode %>
+                                            </a>
+                                            <% }); %>
                                     </div>
                                     <button class="btn btn-info" data-toggle="modal" data-target="#addEpisode">
                                         <i class="fa-solid fa-plus"></i>
@@ -49,7 +52,7 @@
                                     </h3>
                                     <input type="hidden" value="<%- movie.idMovie %>" id="idMovie">
                                     <hr>
-                                    <div id="episode-detail" class="w-100 d-flex">
+                                    <div id="episode-detail" class="w-100 d-flex" style="display: none !important;">
                                         <div style="width: 60%;">
                                             <div>
                                                 <iframe
@@ -129,7 +132,8 @@
                                             </div>
                                             <div class="form-group">
                                                 <label for="Link">Link:</label>
-                                                <input type="text" class="form-control" id="addLink" autocomplete="off">
+                                                <input type="text" class="form-control" id="addEpLink"
+                                                    autocomplete="off">
                                             </div>
                                             <div class="form-group">
                                                 <label for="server">Server:</label>
@@ -137,7 +141,7 @@
                                                     value="<%- movie.Server %>" autocomplete="off">
                                             </div>
 
-                                            <input type="hidden" value="<%- movie.idServer %>">
+                                            <input type="hidden" value="<%- movie.idServer %>" id="idMainServer">
                                             <button id="newEpisode" class="btn btn-primary">Add</button>
                                         </div>
                                     </div>
