done admin page

--- a/src/views/pages/movie/index.ejs
+++ b/src/views/pages/movie/index.ejs
@@ -134,7 +134,7 @@
                                                 </div>
                                                 <div class="form-group d-flex">
                                                     <label for="year" style="line-height: 30px;">Year:</label>
-                                                    <select id="addYear" class="w-50 form-control ml-2">
+                                                    <select id="addYear" class="w-50 form-select ml-2">
                                                         <% years.forEach(year=> { %>
                                                             <option value="<%- year.idYear %>">
                                                                 <%- year.Year %>
@@ -144,7 +144,7 @@
                                                 </div>
                                                 <div class="form-group d-flex">
                                                     <label for="country" style="line-height: 30px;">Country:</label>
-                                                    <select id="addCountry" class="w-50 form-control ml-2">
+                                                    <select id="addCountry" class="w-50 form-select ml-2">
                                                         <% countries.forEach(country=> { %>
                                                             <option value="<%- country.idCountry %>">
                                                                 <%- country.Country %>
@@ -154,7 +154,7 @@
                                                 </div>
                                                 <div class="form-group d-flex">
                                                     <label for="type" style="line-height: 30px;">Type:</label>
-                                                    <select id="addType" class="w-50 form-control ml-2">
+                                                    <select id="addType" class="w-50 form-select ml-2">
                                                         <% types.forEach(type=> { %>
                                                             <option value="<%- type.idType %>">
                                                                 <%- type.Type %>
@@ -164,7 +164,7 @@
                                                 </div>
                                                 <div class="form-group d-flex">
                                                     <label for="server" style="line-height: 30px;">Main server:</label>
-                                                    <select id="addServer" class="w-50 form-control ml-2">
+                                                    <select id="addServer" class="w-50 form-select ml-2">
                                                         <% servers.forEach(server=> { %>
                                                             <option value="<%- server.idServer %>">
                                                                 <%- server.Server %>
