--- a/src/views/pages/episode.ejs
+++ b/src/views/pages/episode.ejs
@@ -95,7 +95,7 @@
 
                                                 <div class="form-group d-flex">
                                                     <label for="server" style="line-height: 30px;">Server:</label>
-                                                    <select id="addLinkServer" class="w-50 form-select ml-2">
+                                                    <select id="addLinkServer" class="w-50 form-control ml-2">
                                                         <% servers.forEach(server=> { %>
                                                             <option value="<%- server.idServer %>">
                                                                 <%- server.Server %>
